# due-process

./: .dev.vars.example  .gitignore  CLAUDE.md  DEVIN_PROMPTS.md  DEVPOST.md  HANDOFF.md  README.md  SETUP_AND_OPS.md  TASKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
.devin/: config.local.json
.hallmark/: log.json
apps/eval/: .gitignore  CLAUDE.md  README.md  api.py  config.py  dataset.py  index_eval_corpus.py  pyproject.toml  run_eval.py  scoring.py
apps/eval/tests/: test_config.py  test_run_eval.py  test_scoring.py
apps/web/: next.config.ts  open-next.config.ts  package.json  tsconfig.json  vitest.config.ts  worker.ts  wrangler.jsonc
apps/web/__tests__/: case-do.test.ts  smoke.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/durable-objects/: case-do.ts
apps/web/lib/: actions.test.ts  actions.ts  ai-search.ts  db.test.ts  db.ts  deadline-engine.test.ts  deadline-engine.ts  documents.test.ts  documents.ts  extraction.test.ts  extraction.ts  grounding.test.ts  grounding.ts  memory.test.ts  memory.ts  stt.ts  (+3 more)
corpus/: MISSING.md  README.md  form-sum-130.md  form-ud-100.md  form-ud-105.md  selfhelp-defenses.md  selfhelp-eviction-overview.md  selfhelp-fee-waiver.md  selfhelp-file-answer.md  selfhelp-notice.md  selfhelp-respond.md  selfhelp-summons-complaint.md  statute-ccp-1162.md  statute-ccp-1167.md  statute-ccp-1170.5.md
demo/: demo-data.json
scripts/: launch-wave1.sh  launch-wave2.sh  launch-wave3.sh  setup-worktrees-wave2.sh  setup-worktrees-wave3.sh  setup-worktrees.sh  upload-corpus.ts
(+16 files in other folders)
