[project]
name = "dueprocess-eval"
version = "0.1.0"
description = "Offline RAG evaluation for DueProcess on reglab/housing_qa (never deployed)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
    "datasets>=2.19,<3",
    "httpx>=0.27,<1",
    "pandas>=2.2,<3",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: ship the eval modules as a small package-less module set.
include = [
    "dataset.py",
    "scoring.py",
    "index_eval_corpus.py",
    "run_eval.py",
    "api.py",
    "config.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
